syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.ea.restaurant.grpc";

message NotParametersRequest {}

message LoginClientResponse{
  string accessToken = 1;
  string refreshToken = 2;
  int32 expiresIn = 3;
  string scopes = 4;
  string clientName = 5;
}

service Oauth2Service{
  rpc loginClient(NotParametersRequest) returns (LoginClientResponse){}
}
